[workspace]
members = [
    # lib
    "prover_fri_utils",
    "prover_fri_types",

    # binaries
    "prover",
    "circuit_synthesizer",
    "setup_key_generator_and_server",
    "witness_generator",
    "vk_setup_data_generator_server_fri",
    "prover_fri",
    "witness_vector_generator",
    "prover_fri_gateway",
    "proof_fri_compressor",
]

resolver = "2"

# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true
[patch."https://github.com/matter-labs/era-boojum"]
boojum = { git = 'https://github.com/ivanslwong-crypto-com/era-boojum', branch = 'cronos-zkevm-18-4-0' }
[patch."https://github.com/matter-labs/era-cuda.git"]
cudart-sys = { git = "https://github.com/ivanslwong-crypto-com/era-cuda.git", branch = "cronos-zkevm-18-4-0", package = "cudart-sys" }
[patch."https://github.com/matter-labs/era-boojum-cuda"]
boojum-cuda = { git = "https://github.com/ivanslwong-crypto-com/era-boojum-cuda.git", branch = "cronos-zkevm-18-4-0" }