[workspace]
members = [
    # lib
    "prover_fri_utils",
    "prover_fri_types",

    # binaries
    "prover",
    "circuit_synthesizer",
    "setup_key_generator_and_server",
    "witness_generator",
    "vk_setup_data_generator_server_fri",
    "prover_fri",
    "witness_vector_generator",
    "prover_fri_gateway",
    "proof_fri_compressor",
]

resolver = "2"

# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true
[patch."https://github.com/matter-labs/era-boojum"]
boojum = { git = 'https://github.com/whs-dot-hk/era-boojum', branch = 'test' }
[patch."https://github.com/matter-labs/era-cuda.git"]
cudart-sys = { git = "https://github.com/whs-dot-hk/era-cuda.git", branch = "test", package = "cudart-sys" }
[patch."https://github.com/matter-labs/era-boojum-cuda"]
boojum-cuda = { git = "https://github.com/whs-dot-hk/era-boojum-cuda", branch = "test" }
[patch."https://github.com/matter-labs/era-heavy-ops-service.git"]
gpu-ffi = { git = "https://github.com/whs-dot-hk/era-heavy-ops-service.git", branch = "test" }
api = { git = "https://github.com/whs-dot-hk/era-heavy-ops-service.git", branch = "test" }
prover-service = { git = "https://github.com/whs-dot-hk/era-heavy-ops-service.git", branch = "test" }
