[package]
name = "zksync_object_store"
version = "1.0.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/cronos-labs/zksync-era"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[dependencies]
zksync_config = { path = "../../lib/config", version = "1.0" }
zksync_types = { path = "../types", version = "1.0" }

bincode = "1"
google-cloud-storage = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main" }
google-cloud-auth = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main" }
google-cloud-default = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main", features = ["storage", "google-cloud-metadata"] }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-endpoint = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
http = "0.2.9"
metrics = "0.20"
tokio = { version = "1.21.2", features = ["full"] }
vlog = { path = "../vlog", version = "1.0" }

[dev-dependencies]
tempdir = "0.3.7"
